<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>app.owlcms</groupId>
	<artifactId>fly-manager</artifactId>
	<name>owlcms fly.io cloud management</name>
	<version>${revision}</version>
	<packaging>jar</packaging>

	<properties>
		<revision>1.0.0</revision>
		<maven.compiler.release>25</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<vaadin.version>25.2.3</vaadin.version>
		<jetty.version>12.0.5</jetty.version>
		<!-- ASM must support the Java 25 bytecode we compile to, so the Jetty
		     annotation scanner (jetty-ee10-annotations) can parse our classes.
		     Jetty 12.0.x bundles an older ASM; force 9.8 which supports major 69. -->
		<asm.version>9.8</asm.version>
	</properties>

	<repositories>
		<!-- The order of definitions matters. Explicitly defining central here
		to make sure it has the highest priority. -->
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>vaadin-prereleases</id>
			<url>
				https://maven.vaadin.com/vaadin-prereleases/
			</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<!-- Repository used by many Vaadin add-ons -->
		<repository>
			<id>Vaadin Directory</id>
			<url>https://maven.vaadin.com/vaadin-addons</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>apache snapshots</id>
			<url>https://repository.apache.org/content/repositories/snapshots</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<!-- The order of definitions matters. Explicitly defining central here
		to make sure it has the highest priority. -->
		<pluginRepository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>vaadin-prereleases</id>
			<url>
				https://maven.vaadin.com/vaadin-prereleases/
			</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<type>pom</type>
				<scope>import</scope>
				<version>${vaadin.version}</version>
			</dependency>
			<!-- Force ASM 9.8 so Jetty's annotation scanner can read Java 25 (major 69)
			     bytecode. asm-commons pulls asm-tree/asm-analysis transitively. -->
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm</artifactId>
				<version>${asm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm-commons</artifactId>
				<version>${asm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm-tree</artifactId>
				<version>${asm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm-analysis</artifactId>
				<version>${asm.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.vaadin</groupId>
			<!-- Replace artifactId with vaadin-core to use only free components -->
			<artifactId>vaadin</artifactId>
		</dependency>
		<!-- Vaadin 25 vaadin/vaadin-core no longer transitively pulls the dev bundle/server.
		     Needed for dev mode; the production profile's shade plugin excludes it. -->
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-dev</artifactId>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.eclipse.jetty.ee10.websocket/jetty-ee10-websocket-jakarta-server -->
		<dependency>
			<groupId>org.eclipse.jetty.ee10.websocket</groupId>
			<artifactId>jetty-ee10-websocket-jakarta-server</artifactId>
			<version>12.0.4</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.eclipse.jetty.ee10/jetty-ee10-annotations -->
		<dependency>
			<groupId>org.eclipse.jetty.ee10</groupId>
			<artifactId>jetty-ee10-annotations</artifactId>
			<version>12.0.4</version>
		</dependency>

		<dependency>
			<groupId>com.maxmind.geoip2</groupId>
			<artifactId>geoip2</artifactId>
			<version>4.4.0</version>
		</dependency>

		<!-- version checking -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>3.6.3</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.35</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>13.0</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-testbench-junit5</artifactId>
			<scope>test</scope>
		</dependency>
	
   <dependency>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson</artifactId>
     <version>2.8.5</version>
   </dependency>

	<dependency>
		<groupId>com.vdurmont</groupId>
		<artifactId>semver4j</artifactId>
		<version>3.1.0</version>
	</dependency>

	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-lang3</artifactId>
		<version>3.17.0</version>
	</dependency>

	<dependency>
		<groupId>commons-io</groupId>
		<artifactId>commons-io</artifactId>
		<version>2.20.0</version>
	</dependency>

	<dependency>
		<groupId>com.vaadin</groupId>
		<artifactId>open</artifactId>
		<version>8.5.0.5</version>
	</dependency>

	<dependency>
		<groupId>org.ow2.asm</groupId>
		<artifactId>asm</artifactId>
		<version>9.8</version>
	</dependency>
</dependencies>

	<build>
		<defaultGoal>jetty:run</defaultGoal>
		<plugins>
			<!-- Define newer versions of Java compiler and war plugin to
                 better support latest JDK versions. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-classpath</argument>
						<classpath />
						<argument>-Dserver.port=8084</argument>
						<argument>-Dvaadin.frontend.hotdeploy=false</argument>
						<argument>-XX:+AllowEnhancedClassRedefinition</argument>
						<argument>-XX:HotswapAgent=fatjar</argument>
						<argument>app.owlcms.fly.Main</argument>
					</arguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>app.owlcms.fly.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-maven-plugin</artifactId>
				<version>${vaadin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-frontend</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<!-- Production mode is activated using -Pproduction -->
			<id>production</id>
			<properties>
				<vaadin.productionMode>true</vaadin.productionMode>
			</properties>

			<dependencies>
				<dependency>
					<groupId>com.vaadin</groupId>
					<artifactId>flow-server-production-mode</artifactId>
					<scope>compile</scope>
				</dependency>
				<!-- Exclude development dependencies from production -->
				<dependency>
					<groupId>com.vaadin</groupId>
					<artifactId>vaadin-core</artifactId>
					<exclusions>
						<exclusion>
							<groupId>com.vaadin</groupId>
							<artifactId>vaadin-dev</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
			</dependencies>

			<build>
				<plugins>
					<plugin>
						<groupId>com.vaadin</groupId>
						<artifactId>vaadin-maven-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>prepare-frontend</goal>
									<goal>build-frontend</goal>
								</goals>
								<phase>compile</phase>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.5.1</version>
						<executions>
							<execution>
								<id>rebuild-jar</id>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
									<!--
									outputFile>target/${project.artifactId}.jar</outputFile -->
									<createDependencyReducedPom>false</createDependencyReducedPom>
									<shadedArtifactAttached>false</shadedArtifactAttached>
									<artifactSet>
										<includes>
											<include>*:*</include>
										</includes>
									</artifactSet>
									<filters>
										<filter>
											<artifact>*:*</artifact>
											<excludes>
												<exclude>META-INF/VERSION.txt</exclude>
												<exclude>META-INF/LICENSE.txt</exclude>
												<exclude>META-INF/VERSION</exclude>
												<exclude>META-INF/LICENSE</exclude>
												<exclude>META-INF/NOTICE*</exclude>
												<exclude>META-INF/DEPENDENCIES</exclude>
												<exclude>META-INF/AL2*</exclude>
												<exclude>META-INF/LGPL2*</exclude>
												<exclude>META-INF/buildinfo.xml</exclude>
												<exclude>LICENSE*</exclude>
												<exclude>NOTICE*</exclude>
												<exclude>META-INF/*.SF</exclude>
												<exclude>META-INF/*.DSA</exclude>
												<exclude>META-INF/*.RSA</exclude>
												<exclude>META-INF/*.md</exclude>
												<exclude>module-info.class</exclude>
												<exclude>com.vaadin:vaadin-dev</exclude>
												<exclude>
													com.vaadin:vaadin-dev-server</exclude>
											</excludes>
										</filter>
									</filters>
									<transformers>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
									</transformers>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.coderplus.maven.plugins</groupId>
						<artifactId>copy-rename-maven-plugin</artifactId>
						<version>1.0</version>
						<executions>
							<execution>
								<id>copy-prerelease</id>
								<phase>package</phase>
								<goals>
									<goal>copy</goal>
								</goals>
								<configuration>
									<fileSets>
										<fileSet>
											<sourceFile>
												${project.build.directory}/${project.artifactId}-${project.version}.jar</sourceFile>
											<destinationFile>
												${project.build.directory}/${project.artifactId}.jar</destinationFile>
										</fileSet>
									</fileSets>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
